# Guardrail

./: .env.example  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktopapp/: index.html  package.json
apps/desktopapp/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktopapp/src-tauri/capabilities/: default.json
apps/desktopapp/src-tauri/config/: default-policy.json
apps/desktopapp/src-tauri/icons/: icon.icns
apps/desktopapp/src-tauri/src/: lib.rs  main.rs
apps/desktopapp/src-tauri/src/approvals/: queue.rs
apps/desktopapp/src-tauri/src/audit/: log.rs
apps/desktopapp/src-tauri/src/commands/: boundary.rs  mod.rs  overview.rs
apps/desktopapp/src-tauri/src/policy/: engine.rs  evaluator.rs  loader.rs  mod.rs  model.rs
apps/desktopapp/src-tauri/src/providers/: catalog.rs
apps/desktopapp/src-tauri/src/runtime/: mod.rs  model.rs  service.rs  state.rs
apps/desktopapp/src-tauri/src/secrets/: detector.rs
apps/desktopapp/src-tauri/src/tool_host/: denial.rs  host.rs  mod.rs  model.rs  router.rs
apps/mobileapp/: app.json  package.json
apps/webapp/: index.html  package.json  vite.config.ts
docs/: DEVELOPER_GUIDE.md  HANDOFFS.md  LOCAL_SERVICE_BOUNDARY.md  MODULE_MANIFEST.md  REPO_MAP.md  STABILITY_CHECKLIST.md  SUITE_HANDOFF_STANDARD.md
scripts/: _common.sh  bootstrap.sh  check-env.sh  check-packages.sh  dev-both.sh  dev-desktop.sh  dev-mobile.sh  dev-web.sh  doctor.sh  install-desktop-app.sh  validate-handoffs.mjs  verify-all.sh  verify-desktop.sh  verify-mobile.sh  verify-web.sh
(+12 files in other folders)
