[package]
name = "guardrail-desktopapp"
version = "0.1.0"
description = "Guardrail desktop shell and runtime scaffold"
authors = ["JAMARQ"]
license = "UNLICENSED"
edition = "2021"

[lib]
name = "guardrail_desktopapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
